# soda-core

./: .all-contributorsrc  .clabot  .editorconfig  .env.example  .env_example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-DATA-SOURCE.AGENT.md  CONTRIBUTING-DATA-SOURCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  LICENSE  MANIFEST.in  Makefile  ONE_BUTTON_RELEASE_PLAN.md  README.md  TODO.md  ansi-logo.txt  checks.yml  configuration.yml  conftest.py  contracts-athena  contracts-bigquery  contracts-databricks  contracts-dremio  contracts-duckdb  contracts-postgres  contracts-redshift  contracts-snowflake  contracts-spark  dev-requirements.in  dev-requirements.txt  docker-compose-arm.yml  myds.yml  pyproject.toml  pytest.ini  requirements.in  (+6 more)
soda-athena/: pyproject.toml  setup.py
soda-athena/tests/: conftest.py
soda-athena/tests/data_sources/: test_athena.py
soda-athena/tests/integration/: test_athena_s3_tables_catalog.py
soda-athena/tests/unit/: test_athena_catalog_with_slash.py  test_athena_dialect.py  test_reset_table_for_fallback_retry.py
soda-bigquery/: pyproject.toml  setup.py
soda-bigquery/tests/: conftest.py
soda-bigquery/tests/data_sources/: test_bigquery.py
soda-bigquery/tests/unit/: test_bigquery_context_auth_logging.py  test_bigquery_dialect.py
soda-core/: README.md  pyproject.toml  setup.py
soda-core/examples/: example.contract.yml
soda-core/examples/alternative_check_type_threshold/: example.contract.yml
soda-core/examples/data-product/: some_report.yml
soda-core/examples/style_1/: missing_checks_style_1.md  schema_checks_style_1.md
soda-core/examples/style_2/: invalid_checks_style_2.md  row_count_checks_style_2.md  schema_checks_style_2.md
soda-core/src/soda_core/: __init__.py  __version__.py  plugin_loader.py  plugins.py
soda-core/tests/: conftest.py
soda-core/tests/components/: test_cli.py  test_cli_contract_handlers.py  test_cli_soda_cloud_handlers.py  test_contract_parser_api.py  test_contract_parsing_errors.py  test_contract_publication_api.py  test_contract_variable_resolving.py  test_contract_verification_api.py  test_data_source_api.py  test_plugin_system.py  test_soda_cloud.py  test_sql_generation.py  test_thresholds.py  test_variables.py  test_yaml_api.py
soda-core/tests/features/: test_dataset_and_check_filters.py  test_dataset_filter.py  test_duplicate_column_check.py  test_failed_rows_check.py  test_freshness_check.py  test_invalid_check.py  test_invalid_reference_check.py  test_metric_expression_check.py  test_metric_query_check.py  test_missing_check.py  test_missing_check_no_rows.py  test_numeric_check.py  test_row_count_check.py  test_schema_basics.py  test_schema_check.py  test_udf_metric_check.py
soda-core/tests/helpers/: a_time_machine.py  data_source_test_helper.py  test_fixtures.py  test_functions.py  time_machine.py
soda-databricks/: pyproject.toml  setup.py
soda-databricks/tests/data_sources/: databricks_data_source_test_helper.py  test_databricks.py
soda-databricks/tests/unit/: test_databricks_connection_probe.py  test_databricks_dialect.py  test_databricks_oauth.py
soda-duckdb/: pyproject.toml  setup.py
soda-duckdb/src/soda_duckdb/: __init__.py
soda-duckdb/tests/data_sources/: test_duckdb.py  test_duckdb_connections.py  test_duckdb_object_storage.py
soda-duckdb/tests/unit/: test_duckdb_dialect.py  test_duckdb_session_timezone.py
soda-fabric/: pyproject.toml  setup.py
soda-fabric/tests/data_sources/: test_fabric.py
soda-fabric/tests/unit/: test_fabric_dialect.py
soda-odps/: pyproject.toml
soda-odps/src/soda_odps/: __init__.py
soda-odps/tests/data_sources/: test_odps.py
soda-odps/tests/unit/: test_odps_dialect.py
soda-postgres/: docker-compose.yml  pyproject.toml  setup.py
soda-postgres/src/soda_postgres/: __init__.py
soda-postgres/tests/: conftest.py
soda-postgres/tests/data_sources/: postgres_data_source_test_helper.py
soda-postgres/tests/features/: postgres_test_schema_basics.py  test_postgres_connection.py  test_postgres_streaming_reads.py  test_postgres_test_schema_basics.py
soda-postgres/tests/unit/: test_postgres_dialect.py
soda-redshift/: pyproject.toml  setup.py
soda-redshift/tests/data_sources/: test_redshift.py
soda-redshift/tests/unit/: test_redshift_dialect.py
soda-snowflake/: pyproject.toml  setup.py
soda-snowflake/tests/: conftest.py
soda-snowflake/tests/data_sources/: snowflake_data_source_test_helper.py  test_snowflake.py  test_warehouse_switching.py
soda-snowflake/tests/unit/: test_snowflake_dialect.py  test_snowflake_session_timezone.py
soda-sparkdf/: pyproject.toml  setup.py
soda-sparkdf/src/soda_sparkdf/: __init__.py
soda-sparkdf/tests/data_sources/: test_sparkdf.py
soda-sparkdf/tests/unit/: test_sparkdf_connection_modes.py  test_sparkdf_dialect.py
soda-sqlserver/: pyproject.toml  setup.py
soda-sqlserver/tests/data_sources/: test_sqlserver.py
soda-sqlserver/tests/unit/: test_sqlserver_connection_parameter_logging.py  test_sqlserver_dialect.py  test_sqlserver_session_timezone.py
soda-synapse/: pyproject.toml  setup.py
soda-synapse/tests/data_sources/: test_synapse.py
soda-synapse/tests/unit/: test_synapse_dialect.py
soda-tests/: pyproject.toml  setup.py
soda-tests/memory_container/: .dockerignore  Dockerfile  Dockerfile.extra  Makefile
soda-tests/src/helpers/: bigquery_data_source_test_helper.py  data_source_test_helper.py  databricks_data_source_test_helper.py  dict_helpers.py  duckdb_data_source_test_helper.py  impl_test_helpers.py  memory_container_plugin.py  memory_container_stub.py  mock_soda_cloud.py  snapshot_connection.py  snapshot_interceptor.py  snapshot_manager.py  snapshot_pytest_plugin.py  snowflake_data_source_test_helper.py  test_connection.py  test_fixtures.py  test_functions.py  test_table.py  yaml_parsing_helpers.py
soda-tests/tests/: conftest.py
soda-tests/tests/components/: manual_soda_cloud_flow.py  manual_test_agent_flow.py  (+23 more)
soda-trino/: pyproject.toml
soda-trino/local_instance/: README.md  docker-compose.yml  generate_jwt_token.sh  generate_keys.sh
(+1802 files in other folders)
