[project]
name = "soda-postgres"
version = "4.0.7rc0"
description = "Soda Postgres V4"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Soda Data N.V.", email = "info@soda.io"}
]
dependencies = [
    "soda-core==4.0.7rc0",
    "psycopg[binary]>=3.2",
]

[project.entry-points."soda.plugins.data_source.postgres"]
PostgresDataSourceImpl = "soda_postgres.common.data_sources.postgres_data_source:PostgresDataSourceImpl"

[tool.uv.sources]
soda-core = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
