[project]
name = "soda-snowflake"
version = "4.0.9rc1"
description = "Soda Snowflake V4"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Soda Data N.V.", email = "info@soda.io"}
]
dependencies = [
    "soda-core==4.0.9rc1",
    "snowflake-connector-python>=3.0",
]

[project.entry-points."soda.plugins.data_source.snowflake"]
SnowflakeDataSourceImpl = "soda_snowflake.common.data_sources.snowflake_data_source:SnowflakeDataSourceImpl"

[tool.uv.sources]
soda-core = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
