[project]
name = "soda-sparkdf"
version = "4.0.7rc0"
description = "Soda SparkDF V4"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Soda Data N.V.", email = "info@soda.io"}
]
dependencies = [
    "soda-core==4.0.7rc0",
    "freezegun",
    "pyspark>=3.5.0",
    "soda-databricks==4.0.7rc0",
]

[project.entry-points."soda.plugins.data_source.sparkdf"]
SparkDataFrameDataSourceImpl = "soda_sparkdf.common.data_sources.sparkdf_data_source:SparkDataFrameDataSourceImpl"

[tool.uv.sources]
soda-core = { workspace = true }
soda-databricks = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
