[project]
name = "soda-tests"
version = "4.0.10rc0"
description = "Soda Core V4 Tests"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Soda Data N.V.", email = "info@soda.io"}
]
dependencies = [
    "soda-core==4.0.10rc0",
    "pytz",
    "python-dateutil",
]

[tool.uv.sources]
soda-core = { workspace = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*.json"]
